# ICPP2025

./: .gitignore  .out  TODO.txt  compile_flags.txt  mytools.hpp  run.sh  tmp.txt
codium-extension-test/: hello.c
exercises1/: binom-coeff.c  ex3.c  ex4.c  ex5.c  ex6.c  id-binary-map.c  scratch.c
exercises2/: B1.c  B2.c  B3.c  B3_header.h  B3_impl.c  scratch.c
exercises3/: C1.cpp  io_exp.cpp  main.cpp  runC1.sh  scratch.cpp
exercises3/src/: B3_header.h
exercises4/: CMakeLists.txt  D1.cpp  D1.tar  D1main.cpp  Doxyfile  runD1.sh
exercises4/src/: D1.cpp  D1.hpp
exercises5/E1/: CMakeLists.txt  E1.out  Makefile  test  test.cpp
exercises5/E1/src/: E1.cpp  E1.hpp
exercises5/F1/: test  test.cpp
exercises5/F1_fused/: Makefile  test  test.cpp
exercises6/G1/: Makefile  main.cpp  test
exercises6/G2/: Makefile  main  main.cpp
exercises7/: H1.cpp  H2.cpp
exercises8/: I1.cpp  I2.cpp  scraps.cpp
makefile_example/: bin  main.cpp  main.d  makefile
makefile_example/include/: header1.hpp  (+1 more)
session1/: conditionals.cpp  conditionals.out  hello.c  test_error.cpp
session2-vars-datatypes/: data.txt  hello.c  read_file.c  read_file.out  structs.c  unions.c  unions.out
session3-control-flow/: 1.c
session4-functions-io/: file_io.c  func_pointer.c
session5-cppClasses/: classes_static.cpp  copy_swap.cpp  rreferences.cpp  scratch.cpp
session6-compile-time-progr/: constexpr.cpp
session7-smart-pointers/: main.cpp  weak-ptr.cpp
tests/: 1.cpp  1.hpp  checkup.c  checkup.h  header_imp.c  header_test.h  main.cpp  test.c  test.txt  testiterators.cpp  u20fy.c
(+14 files in other folders)
